# rag-in-the-loop-evals

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: integration_tests.yml
src/agent/: configuration.py  graph.py  state.py
src/agent/local_faiss_index/: index.faiss  index.pkl
tests/integration_tests/: test_agent.py
